# ChatBot

./: .gitignore  .pylintrc  .replit  README.md  pyproject.toml
ChatBot/: settings.py  urls.py
chatbotapp/: apps.py  gemini.py  models.py  text_cleaner.py  urls.py  views.py
chatbotapp/migrations/: 0001_initial.py  0002_conversation_chatmessage_conversation.py  0003_alter_chatmessage_conversation_and_more.py  0004_document.py  0005_alter_chatmessage_conversation_and_more.py  0006_documentchunk.py  0007_chatmessage_message_type_and_more.py  0008_alter_chatmessage_message_type.py  0009_conversation_active_document_id.py  0010_remove_conversation_active_document_id_and_more.py  0011_chatmessage_document_delete_documentchunk.py
chatbotapp/rag/: embeddings.py  loader.py  rag_pipeline.py  vectorstore.py
chatbotapp/templates/chatbotapp/: index.html
chatbotapp/templates/registration/: login.html  signup.html
documents/: VC3D_Complete_Documentation_2_ROk80JO.docx
