[project]
name = "chatbot-django"
version = "0.1.0"
description = "Django AI Chatbot with RAG"
requires-python = ">=3.11, <3.12"
dependencies = [
    "django>=5.2.10",
    "groq>=1.0.0",
    "gunicorn>=23.0.0",
    "numpy>=2.4.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
